# regio

./: .gitignore  FEED_FILTERS_FRONTEND.md  FRONTEND_TAG_CHANGES.md  README.md  docker-compose.yml  tags_regio.json
server/: .dockerignore  .env.example  .gitignore  Dockerfile  MATRIX FRONTEND GUIDE.md  README.md  pyproject.toml  requirements.txt  ruff.toml  tags_regio.json
server/alembic/: README  env.py
server/alembic/versions/: 2716159fa3ea_convert_tags_id_to_identity.py  32a0b3109cdc_added_columns_to_payment_requests_table_.py  3b92c5c489e9_re_initial_migration_app_structure_.py  4ae094e7f236_merge_broadcast_and_chat_fixes_by_.py  4f3f9f3ef0ec_added_listing_models.py  611f1b77fc8c_improved_invite_code_format_and_added_.py  6ceca6c58d6b_skipped_migration_for_matrix_fields.py  6cf25d388ba4_added_banking_service_tables.py  6eac8a0c08dc_added_invites_table.py  81936d6a079a_dropped_is_verified_column_fully_in_.py  81f28762bdb4_dropped_non_functional_expires_at_.py  84f465b4a081_normalize_listing_tags_to_listing_tags_.py  8aee17a93a6e_changed_tag_id_column_from_uuid_to_.py  9e931718bbfc_shrink_user_facing_zip_code_to_varchar_4.py  a1b2c3d4e5f6_add_tokens_valid_from_to_users.py  a6eb8453c12d_added_payment_notes_column_to_listings.py  a874154619d2_added_users_fields_for_profile_data_and_.py  (+13 more)
server/app/: base_config.py  config.py  database.py  enums.py  main.py  models.py  security.py
server/app/api/: deps.py  (+1 more)
server/distance/: Naming Distances.xlsx  ZIP-Hungary.csv  ZIP_CITY_DATASET_REQUEST.md  data coordinates.csv  final-distances.txt
server/scripts/: seed_tags.py
(+215 files in other folders)
