[project]
name = "regio-server"
version = "0.2.0"
description = "Regio P2P Marketplace API."
requires-python = ">=3.13.9"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.3",
    "fastapi[standard]>=0.125.0",
    "jinja2>=3.1.6",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
    "weasyprint>=67.0",
    "werkzeug>=3.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "tqdm>=4.67.1",
]
